Add App Transport Security to allow http connection

--- a/Smart-Scavenger-Hunt-iOS/Smart-Scavenger-Hunt-iOS/Info.plist
+++ b/Smart-Scavenger-Hunt-iOS/Smart-Scavenger-Hunt-iOS/Info.plist
@@ -47,5 +47,10 @@
 	<string>This app will use camera.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>You can select photos to attach to reports.</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
