Correction networks manquants pour serveur redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   redis:
     image: 'redis'
+    networks: ['default', 'smart-scavenger-hunt']
 
   lrid-generator:
     image: 'smart-scavenger-hunt:lrid-generator'
