--- a/Smart-Scavenger-Hunt-iOS/Smart-Scavenger-Hunt-iOS/Configuration/Settings.bundle/Root.plist
+++ b/Smart-Scavenger-Hunt-iOS/Smart-Scavenger-Hunt-iOS/Configuration/Settings.bundle/Root.plist
@@ -10,17 +10,17 @@
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
-			<string>Group</string>
+			<string>IP</string>
 		</dict>
 		<dict>
 			<key>Type</key>
 			<string>PSTextFieldSpecifier</string>
 			<key>Title</key>
-			<string>Name</string>
+			<string>Router</string>
 			<key>Key</key>
-			<string>name_preference</string>
+			<string>router</string>
 			<key>DefaultValue</key>
-			<string></string>
+			<string>http://172.30.1.208:5001/</string>
 			<key>IsSecure</key>
 			<false/>
 			<key>KeyboardType</key>
@@ -32,29 +32,21 @@
 		</dict>
 		<dict>
 			<key>Type</key>
-			<string>PSToggleSwitchSpecifier</string>
+			<string>PSTextFieldSpecifier</string>
 			<key>Title</key>
-			<string>Enabled</string>
+			<string>Location restriction</string>
 			<key>Key</key>
-			<string>enabled_preference</string>
+			<string>location_restriction</string>
 			<key>DefaultValue</key>
-			<true/>
-		</dict>
-		<dict>
-			<key>Type</key>
-			<string>PSSliderSpecifier</string>
-			<key>Key</key>
-			<string>slider_preference</string>
-			<key>DefaultValue</key>
-			<real>0.5</real>
-			<key>MinimumValue</key>
-			<integer>0</integer>
-			<key>MaximumValue</key>
-			<integer>1</integer>
-			<key>MinimumValueImage</key>
-			<string></string>
-			<key>MaximumValueImage</key>
-			<string></string>
+			<string>http://172.30.1.208:5002/</string>
+			<key>IsSecure</key>
+			<false/>
+			<key>KeyboardType</key>
+			<string>Alphabet</string>
+			<key>AutocapitalizationType</key>
+			<string>None</string>
+			<key>AutocorrectionType</key>
+			<string>No</string>
 		</dict>
 	</array>
 </dict>
