--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,15 @@ services:
     networks: ['default', 'smart-scavenger-hunt']
     depends_on: ['redis']
 
+  supervision:
+    image: 'smart-scavenger-hunt:supervision'
+    ports: ['5003:80/tcp']
+    networks: ['default', 'smart-scavenger-hunt']
+    volumes: ['/var/run/docker.sock:/var/run/docker.sock']
+    depends_on: ['redis']
+
   orchestrator:
     image: 'smart-scavenger-hunt:orchestrator'
-    ports: ['5003:80/tcp']
     networks: ['default', 'smart-scavenger-hunt']
     volumes: ['/var/run/docker.sock:/var/run/docker.sock']
 
