--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,30 +6,30 @@ services:
     networks: ['default', 'smart-scavenger-hunt']
 
   lrid-generator:
-    image: 'smart-scavenger-hunt:lrid-generator'
+    image: 'afloury/smart-scavenger-hunt:lrid-generator'
     networks: ['default', 'smart-scavenger-hunt']
     depends_on: ['redis']
 
   router:
-    image: 'smart-scavenger-hunt:router'
+    image: 'afloury/smart-scavenger-hunt:router'
     ports: ['5001:80/tcp']
     networks: ['default', 'smart-scavenger-hunt']
 
   location-restriction:
-    image: 'smart-scavenger-hunt:location-restriction'
+    image: 'afloury/smart-scavenger-hunt:location-restriction'
     ports: ['5002:80/tcp']
     networks: ['default', 'smart-scavenger-hunt']
     depends_on: ['redis']
 
   supervision:
-    image: 'smart-scavenger-hunt:supervision'
+    image: 'afloury/smart-scavenger-hunt:supervision'
     ports: ['5003:80/tcp']
     networks: ['default', 'smart-scavenger-hunt']
     volumes: ['/var/run/docker.sock:/var/run/docker.sock']
     depends_on: ['redis']
 
   orchestrator:
-    image: 'smart-scavenger-hunt:orchestrator'
+    image: 'afloury/smart-scavenger-hunt:orchestrator'
     networks: ['default', 'smart-scavenger-hunt']
     volumes: ['/var/run/docker.sock:/var/run/docker.sock']
 
