--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,19 +19,20 @@ services:
     image: 'afloury/smart-scavenger-hunt:location-restriction'
     ports: ['5002:80/tcp']
     networks: ['default', 'smart-scavenger-hunt']
-    depends_on: ['redis']
+    depends_on: ['redis', 'lrid-generator']
 
   supervision:
     image: 'afloury/smart-scavenger-hunt:supervision'
     ports: ['5003:80/tcp']
     networks: ['default', 'smart-scavenger-hunt']
     volumes: ['/var/run/docker.sock:/var/run/docker.sock']
-    depends_on: ['redis']
+    depends_on: ['redis', 'lrid-generator']
 
   orchestrator:
     image: 'afloury/smart-scavenger-hunt:orchestrator'
     networks: ['default', 'smart-scavenger-hunt']
     volumes: ['/var/run/docker.sock:/var/run/docker.sock']
+    depends_on: ['redis', 'lrid-generator']
 
 networks:
   smart-scavenger-hunt:
